--- a/src/styles/button.scss
+++ b/src/styles/button.scss
@@ -12,9 +12,15 @@
   border: 0;
   transition: filter 0.2s;
 
-  /* img {
+  img {
     margin-right: 8px;
-  } */
+  }
+
+  &.outlined {
+    background: #fff;
+    border: 1px solid #835afd;
+    color: #835afd;
+  }
 
   &:not(:disabled):hover {
     filter: brightness(0.9);
